--- a/index.html
+++ b/index.html
@@ -113,19 +113,20 @@
                 <label class="page__trekk-header" for="item1">Opptakskrav og poeng</label>
                 <div class="page__trekk-content">
                     <p>For å søke på dette programmet må du ha </p>
-                    <ul class="page__trekk-liste">
+                    <ul class="page__trekk-liste" style="list-style-type:decimal;">
                         <li><a href="https://www.samordnaopptak.no/info/opptak/opptak-uhg/"><b>generrell
                                     studiekompetanse
                                     (samordnaopptak.no)</b></a> eller <a
-                                href="https://www.oslomet.no/studier/soknad-og-opptak/realkompetanse/realkompetanse-ingenior">oppfylle
-                                kravene til realkompetanse</a></li>
+                                href="https://www.oslomet.no/studier/soknad-og-opptak/realkompetanse/realkompetanse-ingenior"><b>oppfylle
+                                    kravene til realkompetanse</b></a></li>
                         <li>matematikk R1 og R2</li>
                         <li>fysikk 1</li>
                     </ul>
                     <p>Det kan være konkurranse om plassene. Ved forrige opptak kom alle kvalifiserte søkere inn.</p>
                     <p>Hvis du mangler generell studiekompetanse eller enkelte fag fra videregående skole, kan du søke
-                        på dette studiet om du har <a href="https://www.oslomet.no/studier/tkd/forkurs-ingenior">bestått
-                            ettårig forkurs for ingeniørutdanning.</a>
+                        på dette studiet om du har <a
+                            href="https://www.oslomet.no/studier/tkd/forkurs-ingenior"><b>bestått
+                                ettårig forkurs for ingeniørutdanning.</b></a>
                     </p>
 
                 </div>
@@ -140,8 +141,8 @@
                         <li>1. mars: frist for enkelte søkere</li>
                     </ul>
                     <a href="https://www.oslomet.no/studier/soknad-og-opptak/opptak-til-bachelor-aarsstudier">
-                        <p>Mer om å
-                            søke på bachelor</p>
+                        <p><b>Mer om å
+                                søke på bachelor</b></p>
                     </a>
                 </div>
             </div>
@@ -196,8 +197,9 @@
                     </ul>
 
                     <a href="https://student.oslomet.no/studier/-/studieinfo/programplan/HINGMAMO/2024/H%C3%98ST">
-                        <p>
-                            < Se programplan på student.oslomet.no</p>
+                        <p><b>
+                                < Se programplan på student.oslomet.no</b>
+                        </p>
                     </a>
                 </div>
             </div>
@@ -680,13 +682,14 @@
                 <div class="page__trekk-content">
                     <a href="https://student.oslomet.no/semesteravgift">
                         <p>
-                            Du betaler en semesteravgift hvert semester (student.oslomet.no).</p>
+                            <b> Du betaler en semesteravgift hvert semester (student.oslomet.no).</b>
+                        </p>
                     </a>
 
-                    <p><a href="https://student.oslomet.no/studieavgift-for-internasjonale-studenter-utenfor-eu-eos">Er
-                            du
-                            internasjonal student fra utenfor EU og EØS, må du betale studieavgift
-                            (student.oslomet.no)</a>. Det er mulig å søke om unntak for betaling av denne
+                    <p><a href="https://student.oslomet.no/studieavgift-for-internasjonale-studenter-utenfor-eu-eos"><b>Er
+                                du
+                                internasjonal student fra utenfor EU og EØS, må du betale studieavgift
+                                (student.oslomet.no)</b>.</a> Det er mulig å søke om unntak for betaling av denne
                         studieavgiften.</p>
                 </div>
             </div>
