--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matematisk modellering og datavitenskap</title>
     <link rel="stylesheet" href="stylesheet/style.css">
+    <link rel="OsloMet Blå Logo" href="image/OsloMet-Bla-Logo.jpg">
     <!-- denne lenken er fra fontawesome (sosiale medier ikoner) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
@@ -114,7 +115,7 @@
                 <div class="page__trekk-content">
                     <p>For å søke på dette programmet må du ha </p>
                     <ul class="page__trekk-liste" style="list-style-type:decimal;">
-                        <li><a href="https://www.samordnaopptak.no/info/opptak/opptak-uhg/"><b>generrell
+                        <li><a href="https://www.samordnaopptak.no/info/opptak/opptak-uhg/"><b>generell
                                     studiekompetanse
                                     (samordnaopptak.no)</b></a> eller <a
                                 href="https://www.oslomet.no/studier/soknad-og-opptak/realkompetanse/realkompetanse-ingenior"><b>oppfylle
@@ -737,6 +738,7 @@
 
         <div class="page__wrapper">
 
+
             <h2>Studiested</h2>
             <a class="page__wrapper-link" href="https://www.oslomet.no/om/studiested-pilestredet">
                 <p>Studiested Pilestredet</p>
@@ -876,8 +878,7 @@
 
         <div class="footer__upper">
             <h1>Hold deg oppdatert på hva som skjer på Oslomet</h1>
-            <h2 class="footer__upper-link"><a href="https://www.oslomet.no/nyhetsbrev"
-                    style="text-decoration: none;">Abonner på vårt
+            <h2 class="footer__upper-link"><a href="https://www.oslomet.no/nyhetsbrev">Abonner på vårt
                     nyhetsbrev</a></h2>
 
         </div>
