--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matematisk modellering og datavitenskap</title>
     <link rel="stylesheet" href="stylesheet/style.css">
-    <link rel="OsloMet Blå Logo" href="image/OsloMet-Bla-Logo.jpg">
+    <link rel="icon" type="image/jpg" href="image/OsloMet-Bla-Logo.jpg">
     <!-- denne lenken er fra fontawesome (sosiale medier ikoner) -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
         integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
