--- a/github-page.html
+++ b/github-page.html
@@ -6,6 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Document</title>
   <link rel="stylesheet" href="stylesheet/style.css" />
+  <!-- denne lenken er fra fontawesome (sosiale medier ikoner) -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -106,6 +110,24 @@
     </section>
 
   </article>
+
+  <footer class="footer">
+
+    <div class="footer__page footer__page--style">
+      <table class="footer__tableRight footer__tableRight--style">
+        <tr>
+          <th><a href="https://www.facebook.com/oslomet/"><i class="fa-brands fa-square-facebook"></i>Facebook</a>
+          </th>
+          <th><a href="https://x.com/oslomet"><i class="fa-brands fa-square-x-twitter"></i>X
+              (Twitter)</a></th>
+          <th><a href="https://no.linkedin.com/school/oslomet/"><i class="fa-brands fa-linkedin"></i>Linkedln</a></th>
+          <th><a href="https://www.instagram.com/oslomet/?hl=nb"><i
+                class="fa-brands fa-square-instagram"></i>Instagram</a></th>
+
+        </tr>
+      </table>
+    </div>
+  </footer>
 </body>
 
 </html>
