--- a/HTMLAccesibility.HTML
+++ b/HTMLAccesibility.HTML
@@ -1,54 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="stylesheet/stylesss.css">
+    <link rel="stylesheet" href="stylesheet/style.css">
 </head>
+
 <body>
     <header class="bar">
-
-        <div class="bar__left">
-            <a href="https://www.oslomet.no/"><img src="image/Oslomet-logo.png" alt="Oslomet-logo"
-                    class="bar__image"></a>
-            <a href="#" class="left__studie left__studie--style">Studieoversikt</a>
-        </div>
         <div class="bar__icon bar__icon--style">
-            <div class="icon__search">
-                <a href="#" style="text-decoration: none;">Søk 🔍</a>
-            </div>
-            <div class="icon__meny">
-                <a href="#" style="text-decoration: none;">Meny ☰</a>
-            </div>
+            <!-- Logo -->
+            <a href="https://www.oslomet.no/"><img src="image/Oslomet-logo-fjernet-bakgrunn.png" alt="Oslomet-logo"
+                    class="bar__image">
+            </a>
 
+            <!-- Navigasjonslenker som alltid er synlige -->
+            <div class="bar__meny">
+                <a href="index.html" class="bar__link bar__link--style">Hjemmeside</a>
+                <a href="github-page.html" class="bar__link bar__link--style">GitHub</a>
+                <a href="Activity.html" class="bar__link bar__link--style">Activity</a>
+            </div>
         </div>
+
+        <!-- Søk -->
+        <a href="#" style="text-decoration: none;" class="bar__search bar__search--style">Søk 🔍</a>
 
     </header>
 
-    <main>   
-        <div class="top__page">   
-            <h1 class="main__title"style="font-weight: 100; text-align: justify; font-family: Arial, Helvetica, sans-serif;">
-            <strong> Accessibility page </strong> - våre tanker og avgjørelser</h1>
+
+    <main>
+        <div class="top__page">
+            <h1 class="main__title"
+                style="font-weight: 100; text-align: justify; font-family: Arial, Helvetica, sans-serif;">
+                <strong> Accessibility page </strong> - våre tanker og avgjørelser
+            </h1>
 
             <div class="head__img">
                 <img src="image/HTML5.png" alt="HTML5 logo">
-                <img src="image/css3.png" alt="CSS3 logo">   
-                <img class="twoboxes" src="image/Doctype__img.png" alt="bilde av koding">        
+                <img src="image/css3.png" alt="CSS3 logo">
+                <img class="twoboxes" src="image/Doctype__img.png" alt="bilde av koding">
             </div>
 
-            <h2 class="page__aboutproject" style="text-align: center; font-family: Arial, Helvetica, sans-serif;"> 
-            Denne siden er laget for å kunne gå i dybden på hvilke avgjørelser 
-            vi har tatt for å optimalisere vår nettside. Vi ønsker å begrunne valg av kode, struktur og 
-            design ved hjelp av HTML og CSS, og vise til testing gjennomført for kvalitetssikring av kodingen
+            <h2 class="page__aboutproject" style="text-align: center; font-family: Arial, Helvetica, sans-serif;">
+                Denne siden er laget for å kunne gå i dybden på hvilke avgjørelser
+                vi har tatt for å optimalisere vår nettside. Vi ønsker å begrunne valg av kode, struktur og
+                design ved hjelp av HTML og CSS, og vise til testing gjennomført for kvalitetssikring av kodingen
             </h2>
         </div>
 
         <p class="page__text" style="font-family: Arial, Helvetica, sans-serif;">
-            Vi hadde et ønske om å optimalisere hjemmesiden Oslomet bruker for informasjon om bachelorprogrammet Matematisk modellering og datavitenskap - ingeniør. 
+            Vi hadde et ønske om å optimalisere hjemmesiden Oslomet bruker for informasjon om bachelorprogrammet
+            Matematisk modellering og datavitenskap - ingeniør.
         </p>
 
     </main>
-    
+
 </body>
+
 </html>
