deleted unused css

--- a/github-page.html
+++ b/github-page.html
@@ -54,10 +54,12 @@
         sammen i laget kommentere og godkjenne endringer før det blir lagt til i hovedkoden (main). Ved å bruke Github
         gjorde det at koden ble ryddig og oversiktlig. Github sitt verktøy gjorde det enkelt å opprette og ha oversikt
         av flere branches, slik at vi kunne jobbe effektivt uten å risikere konflikter i koden.</p>
+
       <div class="github__image">
         <img src="image/images-Github-page/Skjermbilde 2024-11-07 151701.png" alt="Kodeendringer eksempel 1">
         <img src="image/images-Github-page/Skjermbilde 2024-11-07 152015.png" alt="Kodeendringer eksempel 2">
       </div>
+
     </section>
 
 
@@ -113,7 +115,27 @@
 
   <footer class="footer">
 
+
+    <div class="footer__upper">
+      <h1>Kontakt oss!</h1>
+    </div>
+
     <div class="footer__page footer__page--style">
+      <table class="footer__tableLeft">
+        <tr>
+          <th>OSLO METROPOLITAN UNIVERSITY</th>
+          <td>STORBYUNIVERSITETET</td>
+        </tr>
+
+        <tr>
+          <td>Postboks 7, Eksempel plass</td>
+          <td>1147</td>
+          <td>Tlf.: 11 11 11 11</td>
+        </tr>
+      </table>
+
+
+
       <table class="footer__tableRight footer__tableRight--style">
         <tr>
           <th><a href="https://www.facebook.com/oslomet/"><i class="fa-brands fa-square-facebook"></i>Facebook</a>
