--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
                     class="bar__image">
             </a>
 
+            <!-- Diven "bar__meny" er hentet fra denne lenken
+            https://www.w3schools.com/css/tryit.asp?filename=trycss_dropdown_button -->
+
             <div class="bar__meny">
                 <div class="bar__dropdown">
                     <button class="bar__dropdownbtn bar__dropdownbtn--style">Meny ☰</button>
