--- a/HTMLAccesibility.HTML
+++ b/HTMLAccesibility.HTML
@@ -48,6 +48,79 @@
                 vi har tatt for å optimalisere vår nettside. Vi ønsker å begrunne valg av kode, struktur og
                 design ved hjelp av HTML og CSS, og vise til testing gjennomført for kvalitetssikring av kodingen
             </h2>
+
+            <section class="github__section">
+
+
+                <p class="github__tekst">GitHub gjorde det enkelt med å endre linjer slik at alle teammedlemmer kan se
+                    på de
+                    nyeste
+                    kodene som har blitt
+                    lagt til. Vi valgte å bruke Github Desktop. Github Desktop gjorde det lett å opprette flere braches
+                    og gi de
+                    nyeste oppdateringene slik at alle sammen kan se hvilken endringer har blitt gjort. Gjennom pull
+                    request kan
+                    alle
+                    sammen i laget kommentere og godkjenne endringer før det blir lagt til i hovedkoden (main). Ved å
+                    bruke Github
+                    gjorde det at koden ble ryddig og oversiktlig. Github sitt verktøy gjorde det enkelt å opprette og
+                    ha oversikt
+                    av flere branches, slik at vi kunne jobbe effektivt uten å risikere konflikter i koden.</p>
+
+                <div class="github__image">
+                    <img src="image/images-Github-page/Test-performance-1.png" alt="Kodeendringer eksempel 1">
+                    <img src="image/images-Github-page/Test-Performance-2.png" alt="Kodeendringer eksempel 2">
+                </div>
+
+            </section>
+
+            <section class="github__section">
+
+                <h1>Tilgjengelighet ved bruk av fargevalg og kontrast</h1>
+
+                <p class="github__tekst">
+                    Vi har brukt blå gradientbakgrunn med hvit tekst på. Ved bruk av dette skaper det en god kontrast
+                    mellom tekst og bakgrunn slik at det blir en god lesbarhet.
+                </p>
+                <p class="github__tekst">
+                    <b>Headingene</b> og <b>foterene</b> bruker høy kontrast med hvit tekst på blå gradientbakgrunn eks:
+                    (background-image: linear-gradient(to right, #4b9cd3, #0077cc) i .bar og .footer). I headeren har vi
+                    laget en "class" som heter .bar__link. Alle linkene i headeren har hvit bakgrunn. Ved bruk av disse
+                    fargene hjelper det brukere med redusert syn å forstå elementer som er interaktive.
+                </p>
+
+                <h1>Tilpasning av enkel lesbarhet</h1>
+
+                <p class="github__tekst">
+                    Vi har gjort noen endringer med tekststørrelsen og linjehøyder på enkelte seksjoner i nettsiden.
+                    Overskrifter som <b>.page__heading--style</b> har store skrifttyper (2rem for å fremheve viktige
+                    seksjoner). Vi har også brukt i tekster "paragraphs" i en lettlest størrelse i (1.2rem) og samtidig
+                    tatt linjehøyden på 1.5 i enkelte steder som eksempel: <b>.footer__tableMiddle--style</b>. Vi valgte
+                    disse kodene fordi det forbedrer lesbarheten når det er mange tekstblokker.
+                </p>
+
+                <h1>Navigasjonsvennlighet</h1>
+
+                <p class="github__tekst">
+                    Vi har gjort navigasjonen for brukere enkelt med både mus og tastatur. Dropdown-menyen i
+                    <b>.bar__dropdown</b> gjør bruk av <b>:focus:within</b> og <b>:hover</b> for å vise innhold. Dette
+                    sikrer at tastaturbrukere kan navigere effektivt uten mus. Vi har testet dette med tab-knappen.
+                    Hover-effekter, som eks: <b>.bar__link:hover</b>, gir visuelt forståelse som indikerer interaktive
+                    elementer
+                </p>
+                <h1>Tilrettelegging for tastaturbrukere</h1>
+                <p class="github__tekst">
+                    For brukere som navigerer med tastatur, er det lagt til fokus i <b>.bar__dropdown:focus-within</b>
+                    som viser skjulte menyer. Dette er spesielt nyttig i hovedmenyer slik at tastaturbrukere kan
+                    navigere lett.
+                </p>
+                <div class="github__image">
+                    <img src="image/eksempelAvKode-1.png" alt="Kodeendringer eksempel 1">
+                    <img src="image/eksempelAvKode-2.png" alt="">
+                    <img src="image/eksempelAvKode-3.png" alt="">
+                </div>
+
+            </section>
         </div>
 
         <p class="page__text" style="font-family: Arial, Helvetica, sans-serif;">
