--- a/github-page.html
+++ b/github-page.html
@@ -45,7 +45,8 @@
     <section class="github__section">
       <h2 class="github__underoverskrift">Endringer og forbedringer av koder</h2>
 
-      <p class="github__tekst">GitHub gjorde det enkelt med å endre linjer slik at alle teammedlemmer kan se på de
+      <p class="github__tekst github__tekst--style">GitHub gjorde det enkelt med å endre linjer slik at alle
+        teammedlemmer kan se på de
         nyeste
         kodene som har blitt
         lagt til. Vi valgte å bruke Github Desktop. Github Desktop gjorde det lett å opprette flere braches og gi de
@@ -65,7 +66,8 @@
 
     <section class="github__section">
       <h2 class="github__underoverskrift">Historikk over Commits</h2>
-      <p class="github__tekst">Ved å bruke Github gjorde det lettere å se på spesifikke endringer som en teammedlem har
+      <p class="github__tekst github__tekst--style">Ved å bruke Github gjorde det lettere å se på spesifikke endringer
+        som en teammedlem har
         gjort. Vi brukte Github desktop som gjør det enkelt for teammedlemmer for å spore etter endringer i våres
         prosjekt
         over tid. Commit-historikken i Github gir detaljer om hver endring , hvem som har gjort den, hva som er blir
