--- a/HTMLAccesibility.HTML
+++ b/HTMLAccesibility.HTML
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <header class="bar">
+    <header class="bar bar--farge">
         <div class="bar__icon bar__icon--style">
             <!-- Logo -->
             <a href="https://www.oslomet.no/"><img src="image/Oslomet-logo-fjernet-bakgrunn.png" alt="Oslomet-logo"
@@ -17,22 +17,21 @@
             </a>
 
             <!-- Navigasjonslenker som alltid er synlige -->
-            <a href="index.html" class="bar__link bar__link--style">Hjemmeside</a>
-            <a href="Activity.html" class="bar__link bar__link--style">Activity</a>
-            <a href="github-page.html" class="bar__link bar__link--style">GitHub</a>
+            <a href="index.html" class="bar__link bar__link--farge bar__link--style">Hjemmeside</a>
+            <a href="Activity.html" class="bar__link bar__link--farge bar__link--style">Activity</a>
+            <a href="github-page.html" class="bar__link bar__link--farge bar__link--style">GitHub</a>
 
         </div>
 
         <!-- Søk -->
-        <a href="#" style="text-decoration: none;" class="bar__search bar__search--style">Søk 🔍</a>
+        <a href="#" style="text-decoration: none;" class="bar__search bar__search--farge bar__search--style">Søk 🔍</a>
 
     </header>
 
 
     <main>
         <div class="top__page">
-            <h1 class="main__title"
-                style="font-weight: 100; text-align: justify; font-family: Arial, Helvetica, sans-serif;">
+            <h1 class="main__title">
                 <strong> Accessibility page </strong> - våre tanker og avgjørelser
             </h1>
 
