--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
 
-    <header class="bar">
+    <header class="bar bar--farge">
 
         <div class="bar__icon bar__icon--style">
 
@@ -51,9 +51,9 @@
                 </div>
             </div>
             <a href="https://www.oslomet.no/studier/studieoversikt"
-                class="bar__link bar__link--style">Studieoversikt</a>
+                class="bar__link bar__link--farge bar__link--style">Studieoversikt</a>
         </div>
-        <a href="#" style="text-decoration: none;" class="bar__search bar__search--style">Søk 🔍</a>
+        <a href="#" style="text-decoration: none;" class="bar__search bar__search--farge bar__search--style">Søk 🔍</a>
 
     </header>
 
@@ -111,7 +111,7 @@
         <div class="page__trekk">
             <div class="page__trekk-item">
                 <input type="checkbox" id="item1">
-                <label class="page__trekk-header" for="item1">Opptakskrav og poeng</label>
+                <label class="page__trekk-header page__trekk-header--style" for="item1">Opptakskrav og poeng</label>
                 <div class="page__trekk-content">
                     <p>For å søke på dette programmet må du ha </p>
                     <ul class="page__trekk-liste" style="list-style-type:decimal;">
@@ -134,7 +134,7 @@
             </div>
             <div class="page__trekk-item">
                 <input type="checkbox" id="item2">
-                <label class="page__trekk-header" for="item2">Slik søker du</label>
+                <label class="page__trekk-header page__trekk-header--style" for="item2">Slik søker du</label>
                 <div class="page__trekk-content">
                     <p>Du søker på Samordna opptak med studiekode 215 503.</p>
                     <ul class="page__trekk-liste">
@@ -149,7 +149,7 @@
             </div>
             <div class="page__trekk-item">
                 <input type="checkbox" id="item3">
-                <label class="page__trekk-header" for="item3">Hva lærer du?</label>
+                <label class="page__trekk-header page__trekk-header--style" for="item3">Hva lærer du?</label>
                 <div class="page__trekk-content">
                     <p>Bachelor i matematisk modellering og datavitenskap kobler sammen matematikk, informatikk, fysikk
                         og statistikk. </p>
@@ -165,7 +165,8 @@
                     <ul class="page__trekk-liste" style="list-style-type: none;">
                         <li>
                             <input type="checkbox" id="item4">
-                            <label class="page__trekk-header" for="item4">Statiske og datadrevne metoder</label>
+                            <label class="page__trekk-header page__trekk-header--style" for="item4">Statiske og
+                                datadrevne metoder</label>
                             <div class="page__trekk-content">
                                 <p>Du lærer om hvordan du kan bruke målte data koblet med datadrevne og statistiske
                                     metoder til å gjøre beregninger, for eksempel av fremtidige strømpriser.</p>
@@ -176,7 +177,8 @@
                         </li>
                         <li>
                             <input type="checkbox" id="item5">
-                            <label class="page__trekk-header" for="item5">Vitenskapelige beregninger</label>
+                            <label class="page__trekk-header page__trekk-header--style" for="item5">Vitenskapelige
+                                beregninger</label>
                             <div class="page__trekk-content">
                                 <p>Du lærer å lage effektive algoritmer, datastrukturer og kildekoder for å løse
                                     matematiske og fysiske problemer med numeriske metoder.</p>
@@ -186,7 +188,8 @@
                         </li>
                         <li>
                             <input type="checkbox" id="item6">
-                            <label class="page__trekk-header" for="item6">Matematikk og fysikk</label>
+                            <label class="page__trekk-header page__trekk-header--style" for="item6">Matematikk og
+                                fysikk</label>
                             <div class="page__trekk-content">
                                 <p>Du utforsker algebraiske strukturer, blant annet knyttet til dyp læring og kunstig
                                     intelligens.</p>
@@ -206,7 +209,7 @@
             </div>
             <div class="page__trekk-item">
                 <input type="checkbox" id="item7">
-                <label class="page__trekk-header" for="item7">Studiets oppbygging</label>
+                <label class="page__trekk-header page__trekk-header--style" for="item7">Studiets oppbygging</label>
                 <div class="page__trekk-content">
                     <h1 style="background-color: lightblue;">1. studieår</h1>
                     <div class="page__elementer">
@@ -658,7 +661,8 @@
 
             <div class="page__trekk-item">
                 <input type="checkbox" id="item8">
-                <label class="page__trekk-header" for="item8">Hvordan foregår undervisningen?</label>
+                <label class="page__trekk-header page__trekk-header--style" for="item8">Hvordan foregår
+                    undervisningen?</label>
                 <div class="page__trekk-content">
                     <p>Undervisningen er en kombinasjon av</p>
                     <ul class="page__trekk-liste">
@@ -679,7 +683,7 @@
 
             <div class="page__trekk-item">
                 <input type="checkbox" id="item9">
-                <label class="page__trekk-header" for="item9">Hva koster det?</label>
+                <label class="page__trekk-header page__trekk-header--style" for="item9">Hva koster det?</label>
                 <div class="page__trekk-content">
                     <a href="https://student.oslomet.no/semesteravgift">
                         <p>
@@ -697,7 +701,7 @@
 
             <div class="page__trekk-item">
                 <input type="checkbox" id="item10">
-                <label class="page__trekk-header" for="item10">Hva kan du jobbe som?</label>
+                <label class="page__trekk-header page__trekk-header--style" for="item10">Hva kan du jobbe som?</label>
                 <div class="page__trekk-content">
                     <p>Med dette studiet får du IT-kompetanse som er etterspurt i arbeidslivet, særlig om du velger
                         spesialiseringene vitenskapelige beregninger eller statistiske og datadrevne metoder. </p>
@@ -712,14 +716,15 @@
 
             <div class="page__trekk-item">
                 <input type="checkbox" id="item11">
-                <label class="page__trekk-header" for="item11">Utveksling</label>
+                <label class="page__trekk-header page__trekk-header--style" for="item11">Utveksling</label>
                 <div class="page__trekk-content">
                     <p>Du kan dra på utveksling i femte semester.</p>
                 </div>
             </div>
             <div class="page__trekk-item">
                 <input type="checkbox" id="item12">
-                <label class="page__trekk-header" for="item12">Videre studiemuligheter ved OsloMet</label>
+                <label class="page__trekk-header page__trekk-header--style" for="item12">Videre studiemuligheter ved
+                    OsloMet</label>
                 <div class="page__trekk-content">
 
                     <div class="page__elementer">
