--- a/github-page.html
+++ b/github-page.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <header class="bar">
+  <header class="bar bar--farge">
     <div class="bar__icon bar__icon--style">
       <!-- Logo -->
       <a href="https://www.oslomet.no/"><img src="image/Oslomet-logo-fjernet-bakgrunn.png" alt="Oslomet-logo"
@@ -21,13 +21,13 @@
       </a>
 
       <!-- Navigasjonslenker som alltid er synlige -->
-      <a href="index.html" class="bar__link bar__link--style">Hjemmeside</a>
-      <a href="HTMLAccesibility.HTML" class="bar__link bar__link--style">Accessibility</a>
-      <a href="Activity.html" class="bar__link bar__link--style">Activity</a>
+      <a href="index.html" class="bar__link bar__link--farge bar__link--style">Hjemmeside</a>
+      <a href="HTMLAccesibility.HTML" class="bar__link bar__link--farge bar__link--style">Accessibility</a>
+      <a href="Activity.html" class="bar__link bar__link--farge bar__link--style">Activity</a>
     </div>
 
     <!-- Søk -->
-    <a href="#" style="text-decoration: none;" class="bar__search bar__search--style">Søk 🔍</a>
+    <a href="#" style="text-decoration: none;" class="bar__search bar__search--farge bar__search--style">Søk 🔍</a>
 
   </header>
 
@@ -83,7 +83,7 @@
     <section class="github__section">
       <h2 class="github__underoverskrift">Fordeler ved Bruk av Git</h2>
 
-      <ul class="github__liste">
+      <ul class="github__liste github__liste--style">
         <li>
           <strong>Sporbarhet:</strong> En av de største fordelene ved Git er evnen til å holde oversikt over alle
           endringer
