--- a/HTMLAccesibility.HTML
+++ b/HTMLAccesibility.HTML
@@ -32,13 +32,13 @@
     <main>
         <div class="top__page">
             <h1 class="main__title">
-                <strong> Accessibility page </strong> - våre tanker og avgjørelser
+                <strong>Accessibility page </strong> - våre tanker og avgjørelser
             </h1>
 
             <div class="head__img">
-                <img src="image/HTML5.png" alt="HTML5 logo">
-                <img src="image/css3.png" alt="CSS3 logo">
-                <img class="twoboxes" src="image/Doctype__img.png" alt="bilde av koding">
+                <img src="image/images-Accesibility-page/HTML5.png" alt="HTML5 logo">
+                <img src="image/images-Accesibility-page/css3.png" alt="CSS3 logo">
+                <img class="twoboxes" src="image/images-Accesibility-page/Doctype__img.png" alt="bilde av koding">
             </div>
 
             <h2 class="page__aboutproject" style="text-align: center; font-family: Arial, Helvetica, sans-serif;">
@@ -115,10 +115,10 @@
                     Vi har brukt media queries for alle brukere av ulike skjerm.
                 </p>
                 <div class="accesibility__image">
-                    <img src="image/eksempelAvKode-1.png" alt="">
-                    <img src="image/eksempelAvKode-2.png" alt="">
-                    <img src="image/eksempelAvKode-3.png" alt="">
-                    <img src="image/eksempelAvKode-4.png" alt="">
+                    <img src="image/images-Accesibility-page/eksempelAvKode-1.png" alt="">
+                    <img src="image/images-Accesibility-page/eksempelAvKode-2.png" alt="">
+                    <img src="image/images-Accesibility-page/eksempelAvKode-3.png" alt="">
+                    <img src="image/images-Accesibility-page/eksempelAvKode-4.png" alt="">
 
                 </div>
 
