added image to activity page

--- a/Activity.html
+++ b/Activity.html
@@ -12,20 +12,20 @@
 <body>
     <!-- Header med navigasjonsmeny. Kobler til andre sider som f.eks. "index.html" og "github.html" -->
     <header>
-        <nav>
-            <img src="image/Oslomet3.png" alt="" style="width: 5rem;">
-            <ul>
-
+        <nav class="navbar">
+            <!-- https://www.pinterest.com/pin/bird-flower-leaf-animal-logo-design-nature-symbol-black-and-white-curved-fluid-hand--533887730820443196/ -->
+            <img src="image/images-Activity-page/file.png" alt="Bildet av logo" class="navbar__logo">
+            <ul class="navbar__liste">
                 <li><a href="index.html">Hjem</a></li>
-                <li><a href="accessibility.html">Tilgjengelighet</a></li>
-                <li><a href="github.html">GitHub</a></li>
-                <li><a href="activity.html">Aktivitet</a></li>
+                <li><a href="HTMLAccesibility.HTML">Tilgjengelighet</a></li>
+                <li><a href="github-page.html">GitHub</a></li>
+                <li><a href="Activity.html">Aktivitet</a></li>
             </ul>
         </nav>
     </header>
 
     <!-- Hovedinnholdet på siden for "Aktivitet" -->
-    <main>
+    <article>
         <!-- Seksjon: Introduksjon til fotturer som aktivitet -->
         <section>
             <h1>Fotturer i Norge</h1>
@@ -43,13 +43,13 @@
             <h2>Galleri</h2><!--Bildene er kopiert fra UT.NO-->
 
             <div class="gallery">
-                <img src="image/fjelltur1.jpg" alt="Sti i fjellet">
+                <img src="image/images-Activity-page/fjelltur1.jpg" alt="Sti i fjellet">
                 <!--https://ut.no/turforslag/1112192112/liin  Bilde 1-->
-                <img src="image/fjelltur2.jpg" alt="Utsikt over innsjø">
+                <img src="image/images-Activity-page/fjelltur2.jpg" alt="Utsikt over innsjø">
                 <!--https://ut.no/turforslag/1112192260/bomknotten-utsiktspunkt-vennesla Bilde 2-->
-                <img src="image/fjelltur3.jpg" alt="Solnedgang i skogen">
+                <img src="image/images-Activity-page/fjelltur3.jpg" alt="Solnedgang i skogen">
                 <!--https://ut.no/turforslag/1112192260/bomknotten-utsiktspunkt-vennesla Bilde 3-->
-                <img src="image/fjelltur4.jpg" alt="Fottur i skogen med en hund">
+                <img src="image/images-Activity-page/fjelltur4.jpg" alt="Fottur i skogen med en hund">
                 <!--https://ut.no/turforslag/1112192260/bomknotten-utsiktspunkt-vennesla Bilde 4-->
             </div>
         </section>
@@ -92,7 +92,7 @@
                 </li>
             </ul>
         </section>
-    </main>
+    </article>
 
     <!-- Footer som vises nederst på siden -->
     <footer>
