--- a/Activity.html
+++ b/Activity.html
@@ -5,17 +5,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Min Aktivitet - Fotturer</title>
-    <link rel="stylesheet" href="stylesheet/styles.css">
+    <link rel="stylesheet" href="stylesheet/style.css">
     <!-- Kobler til det eksterne CSS-stilarket for hele nettstedet -->
 </head>
 
 <body>
     <!-- Header med navigasjonsmeny. Kobler til andre sider som f.eks. "index.html" og "github.html" -->
     <header>
-        <nav class="navbar">
+        <nav class="navbar navbar--style">
             <!-- https://www.pinterest.com/pin/bird-flower-leaf-animal-logo-design-nature-symbol-black-and-white-curved-fluid-hand--533887730820443196/ -->
-            <img src="image/images-Activity-page/file.png" alt="Bildet av logo" class="navbar__logo">
-            <ul class="navbar__liste">
+            <img src="image/images-Activity-page/file.png" alt="Bildet av logo" class="navbar__image">
+            <ul class="navbar__liste navbar__liste--style">
                 <li><a href="index.html">Hjem</a></li>
                 <li><a href="HTMLAccesibility.HTML">Tilgjengelighet</a></li>
                 <li><a href="github-page.html">GitHub</a></li>
@@ -25,10 +25,10 @@
     </header>
 
     <!-- Hovedinnholdet på siden for "Aktivitet" -->
-    <article>
+    <article class="activity">
         <!-- Seksjon: Introduksjon til fotturer som aktivitet -->
-        <section>
-            <h1>Fotturer i Norge</h1>
+        <section class="activity__section activity__section--style">
+            <h2>Fotturer i Norge</h2>
             <p>Opplev Norges vakre natur gjennom fotturer! Fotturer gir både mosjon og fantastiske naturopplevelser. Her
                 finner du noen gode ressurser for å komme i gang.</p>
             <p>Utforsk mer på
@@ -39,7 +39,7 @@
         </section>
 
         <!-- Seksjon: Galleri med bilder relatert til fotturer -->
-        <section>
+        <section class="activity__section activity__section--style">
             <h2>Galleri</h2><!--Bildene er kopiert fra UT.NO-->
 
             <div class="gallery">
@@ -55,7 +55,7 @@
         </section>
 
         <!-- Seksjon: Beskrivelse av fordelene ved fotturer -->
-        <section>
+        <section class="activity__section activity__section--style">
             <h2>Fordeler ved fotturer</h2>
             <p>Fotturer styrker både kropp og sinn, og gir deg mental ro og fysisk trening. Å være ute i naturen har
                 mange positive helseeffekter.</p>
@@ -67,7 +67,7 @@
         </section>
 
         <!-- Seksjon: Sikkerhet og forberedelser før fotturer -->
-        <section>
+        <section class="activity__section activity__section--style">
             <h2>Sikkerhet på tur</h2>
             <p>Det er viktig å være forberedt før du legger ut på en fottur. Sørg for å ha med deg nødvendig utstyr og
                 sjekk værmeldingen før du drar.</p>
@@ -76,10 +76,10 @@
                     target="_blank">National Geographic</a> og
                 <a href="https://www.backpacker.com/skills/how-to-hike-smart/" target="_blank">Backpacker</a>.
             </p>
-        </section>
+        </section class="activity__section activity__section--style">
 
         <!-- Seksjon: Eksterne lenker for flere ressurser om fotturer -->
-        <section>
+        <section class="activity__section activity__section--style ">
             <h2>Nyttige ressurser</h2>
             <ul>
                 <li><a href="https://www.norskfriluftsliv.no/" target="_blank">Norsk Friluftsliv</a> for informasjon om
@@ -95,7 +95,7 @@
     </article>
 
     <!-- Footer som vises nederst på siden -->
-    <footer>
+    <footer class="footer__activity footer__activity--farge">
         <p>&copy; 2024 Min Aktivitet</p>
     </footer>
 </body>
